# openCLNN

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
kernels/: FC.cl  MSE.cl  Sigmoid.cl
src/: FC.cpp  FC.h  KernelUtils.cpp  KernelUtils.h  Layer.cpp  Layer.h  MSE.cpp  MSE.h  Module.cpp  Module.h  Optimizer.h  Sigmoid.cpp  Sigmoid.h  main.cpp
